# front-end-atp

./: .gitignore  CNAME  Cargo.toml  README.md  TPTPget.js  atphandler.js  codecss.css  data.json  eval.js  getDomainNames.js  index.html  inputExamples.js  inputHandling.js  js.js  problemsolver.html  webassembly.js
.github/workflows/: main.yml
cop/src/lean/: cuts.rs
eval/: Makefile  bushy.mk  chainy.mk  cop.mk  flyspeck.mk  tptp.mk
meancop/: Cargo.toml
meancop/src/: lib.rs  main.rs  parse.rs  preprocess.rs  query.rs  start.rs
pkg/: package.json  webassembly.d.ts  webassembly.js  webassembly_bg.wasm  webassembly_bg.wasm.d.ts
problems/KO/: missing_include.p
src/: lib.rs  utils.rs
