[workspace]
members = [
  "cop",
  "meancop"
]

[profile.release]
codegen-units = 1

[package]
name = "webassembly"
version = "0.1.0"
authors = ["Mateusz Belka <belka.mateusz.bm@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
meancop = { version = "0.1", path = "meancop" }
wasm-bindgen = "0.2.67"
log = "0.4.6"
wasm-logger = "0.2.0"
serde_json = "1.0"
serde = "1.0.125"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]