[workspace]
members = [
  "meancop"
]

[profile.release]
codegen-units = 1

[package]
name = "webassembly"
version = "0.1.0"
authors = ["Mateusz Belka <belka.mateusz.bm@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
meancop = { version = "0.1", path = "meancop" }
wasm-bindgen = "0.2.67"
console_error_panic_hook = "*"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]